[package]
name = "prism-node"
description = "PRISM node daemon — hardware probing, container job execution, E2EE, and platform registration."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
ed25519-dalek.workspace = true

prism-client = { path = "../client" }
prism-core = { path = "../core" }
prism-proto = { path = "../proto" }
prism-runtime = { path = "../runtime" }

[dev-dependencies]
tempfile = "3"
