[package]
name = "prism_tool_router"
description = "Local semantic tool retrieval + routing for PRISM. Drives EmbeddingGemma and FunctionGemma via llama.cpp subprocesses."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
