[package]
name = "prism-proto"
description = "Typed protocol contracts shared between the Rust backbone, Python worker, and MARC27 platform."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

