[package]
name = "prism-python-bridge"
description = "Python worker launch and supervision — subprocess management, venv discovery, and stdio piping."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json.workspace = true

