[package]
name = "prism-tui"
description = "Full-screen Ratatui terminal UI for PRISM — chat, tools, approvals, slash commands."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui-textarea = "0.9"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
unicode-width = { workspace = true }
strip-ansi-escapes = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
arboard = "3"
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }