[package]
name = "prism-tui"
description = "Full-screen Ratatui terminal UI for PRISM — chat, tools, approvals, slash commands."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui-textarea = "0.9"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
unicode-width = { workspace = true }
strip-ansi-escapes = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
arboard = "3"
prism-client = { path = "../client" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta = "1"
# Round-trips the notebook run-command through the same parser the backend
# uses, proving multi-line code survives the slash-command transport.
shlex = "1"