[package]
name = "prism-workflows"
description = "YAML workflow engine — discovery, template interpolation, step execution, and CLI command promotion."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
prism-policy = { path = "../policy" }

[dev-dependencies]
tokio.workspace = true
